# slackbot_data_pipeline

./: README.md  pyproject.toml
src/: my_slack_bot.py
